--- a/aaa.css
+++ b/aaa.css
@@ -701,14 +701,18 @@ hr {
 }
 
 /* bg_logo底圖logo */
-.b {
+.bglogo {
     position: absolute;
-    /* top: -200px; */
-    /* right: 100px; */
-    top:530px;
-    right: 110px;
+    top:550px;
+    right: 105px;
 }
 
+/* logo */
+.bglogo img{
+    
+    width: 150px;
+    height: 200px;
+}
 /* 5.teachers */
 #teachers {
     color: #1d201d;
@@ -731,14 +735,8 @@ hr {
     height: 100vh;
     display: flex;
     justify-content: flex-end;
-    margin: 90px 5px 0 100px ;
+    margin: 50px 5px 0 100px ;
     /* border: solid 5px pink; */
-}
-
-/* 整個圖片區域 */
-#teachers li {
-    color: #1d201d;
-    /* position: relative; */
 }
 
 /* 師資名字 */
@@ -749,10 +747,12 @@ hr {
     letter-spacing: 2px;
     writing-mode: vertical-lr;
     text-shadow: 3px 3px 5px rgba(0,0,0,0.25);
-    margin: 5px 5px 5px 10px;
+    margin: 3px 5px 5px 10px;
     position: absolute;
     z-index: 99;
     /* font-family: 'Unna', serif; */
+    padding-top: 2px;
+    /* border: solid 5px pink; */
 }
 
 #teachers h4 {
@@ -838,9 +838,9 @@ hr {
     /* border: solid 3px rgb(163, 215, 248); */
 }
 
-.hr {
-    border: solid 1px #797474;
-    width: 600px;
+#teachers hr {
+    width: 500px;
+    margin-top: 15px;
 }
 
 /* 6.news  */
@@ -849,6 +849,7 @@ hr {
     display: flex;
     justify-content: center;
     align-items: center;
+    margin-top: -90px;
 }
 
 /* 左邊圖片 */
@@ -861,7 +862,7 @@ hr {
 #news .uu {
     padding: 10px;
     margin: 30px;
-
+    /* border: solid 3px rgb(236, 179, 226); */
 }
 
 /* 標題列 */
@@ -870,16 +871,16 @@ hr {
     justify-content: space-between;
     align-items: center;
     width: 88%;
-    position: relative;
-    padding-top: 10px;
+    /* border: solid 3px rgb(163, 215, 248); */
 }
 
 /* 查看更多 */
 #news .more {
-    padding-top: 20px;
-    position: absolute;
-    top: 10px;
-    right: 0;
+    margin: 25px 10px 0 0;
+}
+#news .more a{
+    margin-bottom: -5px;
+    /* border: solid 3px rgb(236, 179, 226); */
 }
 
 /* 內容大區塊 */
@@ -894,7 +895,6 @@ hr {
     align-items: center;
     width: 88%;
 }
-
 
 /* 向右圈圈箭頭 */
 #news .arrow {
